Fixes accounts mark
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1691 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/arb/action.yml
+++ b/config/locales/arb/action.yml
@@ -961,6 +961,7 @@ arb:
     save_in_draft: 'حفظ في المسودات'
     #>scheduled: 'Scheduled'
     search: 'البحث عن الشراء'
+    #>search_account: 'Search account'
     search_go: 'بدء البحث'
     search_sales: 'البحث عن طلبات البيع'
     #>second_contact: 'Second address'
