--- a/config/locales/eng/action.yml
+++ b/config/locales/eng/action.yml
@@ -8,7 +8,7 @@ eng:
       #>account_entities_kame: 'Account entities kame'
       #>account_journal_entry_lines_kame: 'Account journal entry lines kame'
       account_mark: 'Lettering account: %{number} - %{name}'
-      #>account_unmark: 'Account unletter'
+      #>account_unmark: 'Account unmark'
       account_update: 'Edit account: %{number} - %{name}'
       accountize: 'Flip book'
       accounts: 'Plan of accounts'
@@ -18,7 +18,7 @@ eng:
       bank_statement: 'Account statement N°%{number}'
       bank_statement_create: 'Create a new account statement'
       #>bank_statement_delete: 'Bank statement delete'
-      #>bank_statement_entries_kame: 'Bank statement entries kame'
+      #>bank_statement_lines_kame: 'Bank statement lines kame'
       bank_statement_point: 'Point bank statement %{number}'
       bank_statement_update: 'Edit bank statement %{number}'
       bank_statements: 'Bank statements'
@@ -55,7 +55,7 @@ eng:
       journals: 'Journals'
       #>journals_kame: 'Journals kame'
       unmarked_journal_entry_lines: 'Accounts lettering'
-      #>unlettered_journal_entry_lines_kame: 'Unlettered journal entry lines kame'
+      #>unmarked_journal_entry_lines_kame: 'Unmarked journal entry lines kame'
     application:
       #>i18nize: 'I18nize'
     authentication:
@@ -158,6 +158,7 @@ eng:
       #>depositable_payments_kame: 'Depositable payments kame'
       deposits: 'Deposits'
       #>deposits_kame: 'Deposits kame'
+      #>entities_dyli: 'Entities dyli'
       incoming_payment: 'Incoming payment %{number} de %{entity}'
       incoming_payment_create: 'Add a new incoming payment'
       #>incoming_payment_delete: 'Incoming payment delete'
@@ -901,7 +902,7 @@ eng:
       attorneys: 'Attorneys'
       clients: 'Customers'
       suppliers: 'Suppliers'
-      title: 'third Party category'
+      title: 'Third party categories'
     line: 'Line #%{index}:'
     line_stock: 'Warehouse: %{warehouse}, available quantity: %{virtual_q}'
     listing_extract: 'Extract listing'
@@ -1165,6 +1166,7 @@ eng:
     save_in_draft: 'Save as draft'
     scheduled: 'Scheduled'
     search: 'Search'
+    search_account: 'Search account'
     search_go: 'Search!'
     search_sales: 'Search sales'
     second_contact: 'Second address'
@@ -1434,7 +1436,8 @@ eng:
     sales_order_already_invoiced: 'The sale has already been invoiced: you can not define delivery '
     sales_order_cannot_be_updated: 'The estimate is no longer editable.'
     sales_order_cant_be_deleted: 'The sales order can not be deleted.'
-    select_entries_to_letter_together: 'Select entries in order to letter them together'
+    select_entries_to_letter_together: 'Select entries in order to letter them together' #!
+    #>select_entries_to_mark_together: 'Select entries to mark together'
     specify_filter: 'You must choose at least one search filter'
     specify_updates: 'You must specify at least one field to edit'
     unavailable_model: 'Inexistent %{model} (%{id})'
