--- a/config/locales/jpn/action.yml
+++ b/config/locales/jpn/action.yml
@@ -622,7 +622,7 @@ jpn:
       #>attorneys: 'Attorneys'
       #>clients: 'Customers'
       #>suppliers: 'Suppliers'
-      #>title: 'third Party category'
+      #>title: 'Third party categories'
     #>line: 'Line #%{index}:'
     #>line_stock: 'Warehouse: %{warehouse}, available quantity: %{virtual_q}'
     #>listing_extract: 'Extract listing'
@@ -891,6 +891,7 @@ jpn:
     #>save_in_draft: 'Save as draft'
     #>scheduled: 'Scheduled'
     search: '探す'
+    #>search_account: 'Search account'
     #>search_go: 'Search!'
     #>search_sales: 'Search sales'
     #>second_contact: 'Second address'
